--- a/client/src/CSS/ITProjects.css
+++ b/client/src/CSS/ITProjects.css
@@ -18,6 +18,7 @@
 
 
     .projects img {
+        min-height: 286px;
         width: 100%;
         border-radius: 10%;
         border-style: solid;
