--- a/client/src/CSS/Resume.css
+++ b/client/src/CSS/Resume.css
@@ -13,14 +13,20 @@
     font-weight: bold;
 }
 
-.resume-more-past-experience,
-.resume-language-courses {
+.resume-open {
     color:#00008B;;
 }
 
-.resume-more-past-experience:hover,
-.resume-language-courses:hover {
+.resume-open:hover {
     color:coral;
+}
+
+.resume-close {
+    color:coral;
+}
+
+.resume-close:hover {
+    color: #00008B;
 }
 
 .resume-project-links:hover{
@@ -289,8 +295,8 @@
 
     }
 
-    .resume-more-past-experience,
-    .resume-language-courses {
+    .resume-open,
+    .resume-close {
         text-align: center;
         font-size: 125%;
         font-weight: bold;
@@ -830,8 +836,8 @@
 
     }
 
-    .resume-more-past-experience,
-    .resume-language-courses {
+    .resume-open,
+    .resume-close {
         text-align: center;
         font-size: 125%;
       font-weight: bold;
@@ -1362,8 +1368,8 @@
 
     }
 
-    .resume-more-past-experience,
-    .resume-language-courses {
+    .resume-open,
+    .resume-close {
         text-align: center;
         font-size: 100%;
         font-weight: bold;
