--- a/client/src/CSS/Resume.css
+++ b/client/src/CSS/Resume.css
@@ -344,6 +344,10 @@
         width: 100%;
         height: 100%;
         grid-template-columns: 20% 20% 60%;
+         border-style: solid;
+        border-color: coral;
+        border-radius:2%;
+        border-width: 1px;
 
     }
 
@@ -351,7 +355,6 @@
     .resume-book-front img {
         width: 100%;
         height: 100%;
-
         border-style: solid;
         border-width: 1px;
         border-color: blue;
@@ -411,12 +414,10 @@
 
         grid-column-start: 3;
         grid-column-end: 4;
-        color: maroon;
+        color:  #00008B;;
         padding: 5%;
         margin-left: 3%;
         margin-top: 2%;
-        background-color: #FFD9B2;
-        border-radius: 10%;
         font-size: 90%;
 
     }
@@ -885,6 +886,10 @@
         width: 100%;
         height: 100%;
         grid-template-columns: 20% 20% 60%;
+        border-style: solid;
+        border-color: coral;
+        border-radius:2%;
+        border-width: 1px;
 
     }
 
@@ -952,12 +957,10 @@
 
         grid-column-start: 3;
         grid-column-end: 4;
-        color: maroon;
+        color: #00008B;
         padding: 5%;
         margin-left: 3%;
         margin-top: 2%;
-        background-color: #FFD9B2;
-
         font-size: 90%;
 
     }
@@ -1421,20 +1424,23 @@
 
 
     .resume-book-wrapper {
-
+        border-style: solid;
+        border-color: coral;
+        border-radius:2%;
+        border-width: 1px;
         display: flex;
 
     }
 
 
     .resume-book-front img {
-
         width: 100%;
         height: 100%;
-
         border-style: solid;
+        border-color: coral;
+        border-radius:2%;
         border-width: 1px;
-        border-color: blue;
+
     }
 
 
@@ -1491,10 +1497,9 @@
     .resume-book-more-info {
         width: 100%;
         height: 50%;
-        color: maroon;
+        color: #00008B;
         padding: 2%;
         margin-left: 3%;
-        background-color: #FFD9B2;
         font-size: 90%;
 
     }
