--- a/client/src/CSS/Resume.css
+++ b/client/src/CSS/Resume.css
@@ -33,6 +33,8 @@
     color: #00008B;
 }
 
+.resume-book-know-more {margin-left:30%;}
+
 @media only screen and (min-width: 1101px) {
 
 
@@ -258,7 +260,7 @@
     }
 
     .resume-margin {
-        width: 32%;
+        width: 30%;
     }
 
     .resume-italic {
@@ -343,13 +345,8 @@
         display: grid;
         width: 100%;
         height: 100%;
-        grid-template-columns: 20% 20% 60%;
-         border-style: solid;
-        border-color: coral;
-        border-radius:2%;
-        border-width: 1px;
-
-    }
+        grid-template-columns: 2% 14% 14% 40% 14% 14% 2%;
+        }
 
 
     .resume-book-front img {
@@ -369,8 +366,8 @@
         height: 450px;
         border: 1px solid #f1f1f1;
         perspective: 1000px;
-        grid-column-start: 1;
-        grid-column-end: 3;
+        grid-column-start: 4;
+        grid-column-end: 5;
     }
 
     .resume-flip-box-inner {
@@ -389,7 +386,6 @@
     .resume-flip-box-front,
     .resume-flip-box-back {
         position: absolute;
-        padding: 2%;
         width: 100%;
         height: 100%;
         -webkit-backface-visibility: hidden;
@@ -801,7 +797,7 @@
     }
 
     .resume-margin {
-        width: 32%;
+        width: 30%;
     }
 
     .resume-italic {
@@ -885,12 +881,7 @@
         display: grid;
         width: 100%;
         height: 100%;
-        grid-template-columns: 20% 20% 60%;
-        border-style: solid;
-        border-color: coral;
-        border-radius:2%;
-        border-width: 1px;
-
+        grid-template-columns: 2% 14% 14% 40% 14% 14% 2%;
     }
 
 
@@ -912,8 +903,8 @@
         height: 450px;
         border: 1px solid #f1f1f1;
         perspective: 1000px;
-        grid-column-start: 1;
-        grid-column-end: 3;
+        grid-column-start: 4;
+        grid-column-end: 5;
     }
 
     .resume-flip-box-inner {
@@ -932,7 +923,6 @@
     .resume-flip-box-front,
     .resume-flip-box-back {
         position: absolute;
-        padding: 2%;
         width: 100%;
         height: 100%;
         -webkit-backface-visibility: hidden;
@@ -962,6 +952,7 @@
         margin-left: 3%;
         margin-top: 2%;
         font-size: 90%;
+
 
     }
 
@@ -1337,7 +1328,7 @@
     }
 
     .resume-margin {
-        width: 32%;
+        width: 30%;
     }
 
     .resume-italic {
@@ -1424,11 +1415,8 @@
 
 
     .resume-book-wrapper {
-        border-style: solid;
-        border-color: coral;
-        border-radius:2%;
-        border-width: 1px;
-        display: flex;
+       display: grid;
+        grid-template-columns: 2% 14% 14% 40% 14% 14% 2%;
 
     }
 
@@ -1453,8 +1441,8 @@
         height: 150px;
         border: 1px solid #f1f1f1;
         perspective: 1000px;
-        grid-column-start: 1;
-        grid-column-end: 3;
+        grid-column-start: 4;
+        grid-column-end: 5;
     }
 
     .resume-flip-box-inner {
@@ -1473,7 +1461,6 @@
     .resume-flip-box-front,
     .resume-flip-box-back {
         position: absolute;
-        padding: 2%;
         width: 100%;
         height: 100%;
         -webkit-backface-visibility: hidden;
@@ -1495,6 +1482,8 @@
     }
 
     .resume-book-more-info {
+        grid-column-start: 3;
+        grid-column-end: 4;
         width: 100%;
         height: 50%;
         color: #00008B;
